- added global theme for icons - added mdi icons - AbstractScoreService.findApproval now has idStage - added IconMdiComponent to handle the mdi icons - updated dependencies - enhanced the css of params.component - clear the next param in the params.component - added world record info in the Score model - removed Date Achieved from score-approval.component - added Stage into score-approval.component - added world record info in the score-info.component - disable button of the score while the modal is loading in the score-top-table.component - added a yesNo pipe (yes for true, no for false)

--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "@material/elevation": "~10.0.0",
-    "@stlmpp/control": "~5.0.0-rc.2",
-    "@stlmpp/router": "~5.0.0-rc.2",
-    "@stlmpp/store": "~5.0.0-rc.2",
-    "@stlmpp/utils": "~5.0.0-rc.2",
+    "@mdi/font": "^5.9.55",
+    "@stlmpp/control": "~5.0.0-rc.3",
+    "@stlmpp/router": "~5.0.0-rc.3",
+    "@stlmpp/store": "~5.0.0-rc.3",
+    "@stlmpp/utils": "~5.0.0-rc.3",
     "flag-icon-css": "~3.5.0",
     "ngx-progressbar": "~6.1.0",
     "rxjs": "~6.6.6",
