- added prefer-const rule to eslint - renamed catchError --> catch-and-throw - added AuthPlayerResolver to resolve the player currently logged in - added CurrencyMaskDirective (the ngx-currency, but with @stlmpp/control) - added ScoreAddComponent - added MaskDirective (ngx-mask, but with @stlmpp/control) - made the ModalRef.init method private and renamed to _init - added option on ScoreParamsComponent to get the params from the QueryParams - removed dateAchieved from ScoreAdd model - fixed the select now displaying the selected value correctly when grouped - removed the auditTime from the StateComponent, used observeOn instead (it was causing a massive delay in some areas) - added option to check for input changes in the StateComponent, for auto updating

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/router": "~11.2.5",
     "@material/elevation": "~10.0.0",
     "@mdi/font": "~5.9.55",
-    "@stlmpp/control": "~5.0.0",
+    "@stlmpp/control": "~5.1.0",
     "@stlmpp/router": "~5.0.0",
     "@stlmpp/store": "~5.0.0",
     "@stlmpp/utils": "~5.0.0",
     "flag-icon-css": "~3.5.0",
+    "ngx-currency": "~2.5.2",
+    "ngx-mask": "~11.1.4",
     "ngx-progressbar": "~6.1.0",
     "rxjs": "~6.6.6",
     "socket.io-client": "~2.4.0",
