- update dependencies - added link to world-record table

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
-    "@material/elevation": "~10.0.0",
+    "@material/elevation": "~11.0.0",
     "@mdi/font": "~5.9.55",
     "@stlmpp/control": "~5.1.3",
     "@stlmpp/router": "~5.0.0",
@@ -36,29 +36,28 @@
     "socket.io-client": "~2.4.0",
     "st-utils": "~1.5.0",
     "tslib": "~2.0.0",
-    "type-fest": "~1.0.1",
+    "type-fest": "~1.0.2",
     "uuid": "~8.3.2",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.9",
-    "@angular-eslint/builder": "~2.0.0",
-    "@angular-eslint/eslint-plugin": "~2.0.0",
-    "@angular-eslint/eslint-plugin-template": "~2.0.0",
-    "@angular-eslint/schematics": "~2.0.2",
-    "@angular-eslint/template-parser": "~2.0.0",
+    "@angular-eslint/builder": "^3.0.0",
+    "@angular-eslint/eslint-plugin": "^3.0.0",
+    "@angular-eslint/eslint-plugin-template": "^3.0.0",
+    "@angular-eslint/schematics": "~3.0.0",
+    "@angular-eslint/template-parser": "^3.0.0",
     "@angular/cli": "~11.2.9",
     "@angular/compiler-cli": "~11.2.10",
     "@types/jasmine": "~3.6.9",
     "@types/node": "~12.11.1",
     "@types/socket.io-client": "~1.4.36",
     "@types/uuid": "~8.3.0",
-    "@typescript-eslint/eslint-plugin": "~4.21.0",
-    "@typescript-eslint/parser": "~4.21.0",
-    "eslint": "~7.23.0",
+    "@typescript-eslint/eslint-plugin": "~4.22.0",
+    "@typescript-eslint/parser": "~4.22.0",
+    "eslint": "~7.24.0",
     "eslint-plugin-import": "~2.22.1",
     "eslint-plugin-jsdoc": "~32.3.0",
-    "eslint-plugin-prefer-arrow": "~1.2.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
