- updated eslint config to allow underscore properties - added skipFirstAnimation animation - renamed card to bio-card and all of its children - added generic component ScoreList (mobile) - added Table Component (a grid component, this will generate some refactors in the future) - added ScoreListResponsive to display a table of scores (desktop) and a list of scores (mobile) - added collapse option to the CardComponent - added rows to the ListComponent

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -85,6 +85,11 @@
             "leadingUnderscore": "allow"
           },
           {
+            "selector": "memberLike",
+            "format": ["camelCase"],
+            "leadingUnderscore": "allow"
+          },
+          {
             "selector": "typeLike",
             "format": ["PascalCase"]
           },
