--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.11",
-    "@angular/cdk": "~11.2.10",
-    "@angular/common": "~11.2.11",
-    "@angular/compiler": "~11.2.11",
-    "@angular/core": "~11.2.11",
-    "@angular/forms": "~11.2.11",
-    "@angular/platform-browser": "~11.2.11",
-    "@angular/platform-browser-dynamic": "~11.2.11",
-    "@angular/router": "~11.2.11",
+    "@angular/animations": "~11.2.12",
+    "@angular/cdk": "~11.2.11",
+    "@angular/common": "~11.2.12",
+    "@angular/compiler": "~11.2.12",
+    "@angular/core": "~11.2.12",
+    "@angular/forms": "~11.2.12",
+    "@angular/platform-browser": "~11.2.12",
+    "@angular/platform-browser-dynamic": "~11.2.12",
+    "@angular/router": "~11.2.12",
     "@material/elevation": "~11.0.0",
     "@mdi/font": "~5.9.55",
     "@stlmpp/control": "~5.1.3",
@@ -41,23 +41,23 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.10",
-    "@angular-eslint/builder": "^4.0.0",
-    "@angular-eslint/eslint-plugin": "^4.0.0",
-    "@angular-eslint/eslint-plugin-template": "^4.0.0",
-    "@angular-eslint/schematics": "~4.0.0",
-    "@angular-eslint/template-parser": "^4.0.0",
-    "@angular/cli": "~11.2.10",
-    "@angular/compiler-cli": "~11.2.11",
-    "@types/jasmine": "~3.6.9",
+    "@angular-devkit/build-angular": "~0.1102.11",
+    "@angular-eslint/builder": "~4.2.0",
+    "@angular-eslint/eslint-plugin": "~4.2.0",
+    "@angular-eslint/eslint-plugin-template": "~4.2.0",
+    "@angular-eslint/schematics": "~4.2.0",
+    "@angular-eslint/template-parser": "~4.2.0",
+    "@angular/cli": "~11.2.11",
+    "@angular/compiler-cli": "~11.2.12",
+    "@types/jasmine": "~3.6.11",
     "@types/node": "~12.11.1",
     "@types/socket.io-client": "~1.4.36",
     "@types/uuid": "~8.3.0",
-    "@typescript-eslint/eslint-plugin": "~4.22.0",
-    "@typescript-eslint/parser": "~4.22.0",
-    "eslint": "~7.24.0",
+    "@typescript-eslint/eslint-plugin": "~4.22.1",
+    "@typescript-eslint/parser": "~4.22.1",
+    "eslint": "~7.25.0",
     "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jsdoc": "~32.3.1",
+    "eslint-plugin-jsdoc": "~33.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
