- updated angular to 12 - updated @stlmpp/* to 6 - updated rxjs to 7 - added eslint rule eqeqeq - fixed bugs related to rxjs 7 - fixed undefined bug in the score-approval.component - replaced stDefault pipe with the new nullish coalescing (??) operator in the templates - removed AllNullable type - removed unnecessary conversion to string in the CustomHttpParams - removed StUtilsModule.forRoot() (there's no forRoot anymore)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
         "prefer-arrow-callback": ["error"],
         "no-shadow": ["off"],
         "prefer-const": ["error", { "destructuring": "all" }],
+        "eqeqeq": ["error", "always", { "null": "ignore" }],
         "@typescript-eslint/explicit-member-accessibility": ["off", { "accessibility": "explicit" }],
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/unified-signatures": "off",
