--- a/package.json
+++ b/package.json
@@ -13,52 +13,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.13",
-    "@angular/cdk": "~11.2.12",
-    "@angular/common": "~11.2.13",
-    "@angular/compiler": "~11.2.13",
-    "@angular/core": "~11.2.13",
-    "@angular/forms": "~11.2.13",
-    "@angular/platform-browser": "~11.2.13",
-    "@angular/platform-browser-dynamic": "~11.2.13",
-    "@angular/router": "~11.2.13",
+    "@angular/animations": "~12.0.0",
+    "@angular/cdk": "~12.0.0",
+    "@angular/common": "~12.0.0",
+    "@angular/compiler": "~12.0.0",
+    "@angular/core": "~12.0.0",
+    "@angular/forms": "~12.0.0",
+    "@angular/platform-browser": "~12.0.0",
+    "@angular/platform-browser-dynamic": "~12.0.0",
+    "@angular/router": "~12.0.0",
     "@material/elevation": "~11.0.0",
     "@mdi/font": "~5.9.55",
-    "@stlmpp/control": "~5.1.3",
-    "@stlmpp/router": "~5.0.0",
-    "@stlmpp/store": "~5.1.2",
-    "@stlmpp/utils": "~5.0.1",
+    "@stlmpp/control": "~6.0.0",
+    "@stlmpp/router": "~6.0.0",
+    "@stlmpp/store": "~6.0.0",
+    "@stlmpp/utils": "~6.0.0",
     "flag-icon-css": "~3.5.0",
     "ngx-currency": "~2.5.2",
     "ngx-mask": "~11.1.5",
-    "ngx-progressbar": "~6.1.0",
-    "rxjs": "~6.6.7",
+    "ngx-progressbar": "~6.1.1",
+    "rxjs": "~7.0.1",
     "socket.io-client": "~2.4.0",
-    "st-utils": "~1.6.1",
-    "tslib": "~2.0.0",
+    "st-utils": "~1.7.0",
+    "tslib": "~2.2.0",
     "uuid": "~8.3.2",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.12",
-    "@angular-eslint/builder": "~4.2.0",
-    "@angular-eslint/eslint-plugin": "~4.2.0",
-    "@angular-eslint/eslint-plugin-template": "~4.2.0",
-    "@angular-eslint/schematics": "~4.2.0",
-    "@angular-eslint/template-parser": "~4.2.0",
-    "@angular/cli": "~11.2.12",
-    "@angular/compiler-cli": "~11.2.13",
-    "@types/jasmine": "~3.7.1",
+    "@angular-devkit/build-angular": "~12.0.0",
+    "@angular-eslint/builder": "~12.0.0",
+    "@angular-eslint/eslint-plugin": "~12.0.0",
+    "@angular-eslint/eslint-plugin-template": "~12.0.0",
+    "@angular-eslint/schematics": "~12.0.0",
+    "@angular-eslint/template-parser": "~12.0.0",
+    "@angular/cli": "~12.0.0",
+    "@angular/compiler-cli": "~12.0.0",
+    "@types/jasmine": "~3.7.4",
     "@types/node": "~12.11.1",
     "@types/socket.io-client": "~1.4.36",
     "@types/uuid": "~8.3.0",
-    "@typescript-eslint/eslint-plugin": "~4.23.0",
-    "@typescript-eslint/parser": "~4.23.0",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
     "eslint": "~7.26.0",
-    "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jsdoc": "~33.3.0",
+    "eslint-plugin-import": "~2.23.0",
+    "eslint-plugin-jsdoc": "~34.2.2",
     "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
@@ -66,7 +66,7 @@
     "karma-jasmine-html-reporter": "~1.6.0",
     "prettier": "~2.3.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.1.5"
+    "ts-node": "~9.1.1",
+    "typescript": "~4.2.4"
   }
 }
