- use angular HttpStatusCode enum - fixed approval count not fetching the first time - updated websockets path - added manager to websocket service - fixed the environment files - removed deprecated --prod from build-prod script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build-dev": "ng build --configuration development",
-    "build-prod": "ng build --prod"
+    "build-prod": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
