--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@angular/service-worker": "~12.0.1",
     "@material/elevation": "~11.0.0",
     "@mdi/font": "~5.9.55",
     "@stlmpp/control": "~6.0.0",
     "@stlmpp/router": "~6.0.0",
     "@stlmpp/store": "~6.0.0",
     "@stlmpp/utils": "~6.0.0",
+    "date-fns": "~2.21.3",
     "flag-icon-css": "~3.5.0",
     "ngx-currency": "~2.5.2",
     "ngx-mask": "~12.0.0",
