- added footer (closes #17)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
       "@model/*": ["./src/app/model/*"],
       "@shared/*": ["./src/app/shared/*"],
       "@environment/*": ["./src/environments/*"]
-    }
+    },
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
