--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rxjs": "~7.1.0",
     "socket.io-client": "~2.4.0",
     "st-utils": "~1.7.0",
+    "string-similarity": "~4.0.4",
     "tslib": "~2.2.0",
     "uuid": "~8.3.2",
     "zone.js": "~0.11.4"
@@ -53,6 +54,7 @@
     "@types/jasmine": "~3.7.4",
     "@types/node": "~12.11.1",
     "@types/socket.io-client": "~1.4.36",
+    "@types/string-similarity": "^4.0.0",
     "@types/uuid": "~8.3.0",
     "@typescript-eslint/eslint-plugin": "4.25.0",
     "@typescript-eslint/parser": "4.25.0",
