--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@stlmpp/router": "~6.1.0",
     "@stlmpp/store": "~6.1.0",
     "@stlmpp/utils": "~6.1.0",
-    "date-fns": "~2.21.3",
+    "date-fns": "~2.22.1",
     "flag-icon-css": "~3.5.0",
     "ngx-currency": "~2.5.2",
     "ngx-mask": "~12.0.0",
@@ -44,23 +44,23 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.2",
-    "@angular-eslint/builder": "~12.0.0",
-    "@angular-eslint/eslint-plugin": "~12.0.0",
-    "@angular-eslint/eslint-plugin-template": "~12.0.0",
-    "@angular-eslint/schematics": "~12.0.0",
-    "@angular-eslint/template-parser": "~12.0.0",
+    "@angular-eslint/builder": "~12.1.0",
+    "@angular-eslint/eslint-plugin": "~12.1.0",
+    "@angular-eslint/eslint-plugin-template": "~12.1.0",
+    "@angular-eslint/schematics": "~12.1.0",
+    "@angular-eslint/template-parser": "~12.1.0",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
-    "@types/jasmine": "~3.7.4",
+    "@types/jasmine": "~3.7.6",
     "@types/node": "~12.11.1",
     "@types/socket.io-client": "~1.4.36",
-    "@types/string-similarity": "^4.0.0",
+    "@types/string-similarity": "~4.0.0",
     "@types/uuid": "~8.3.0",
-    "@typescript-eslint/eslint-plugin": "4.25.0",
-    "@typescript-eslint/parser": "4.25.0",
+    "@typescript-eslint/eslint-plugin": "~4.25.0",
+    "@typescript-eslint/parser": "~4.25.0",
     "eslint": "~7.27.0",
-    "eslint-plugin-import": "~2.23.3",
-    "eslint-plugin-jsdoc": "~35.0.0",
+    "eslint-plugin-import": "~2.23.4",
+    "eslint-plugin-jsdoc": "~35.1.0",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.2",
