--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@angular/service-worker": "~12.0.3",
     "@material/elevation": "~11.0.0",
     "@mdi/font": "~5.9.55",
-    "@stlmpp/control": "~6.2.0",
-    "@stlmpp/router": "~6.2.0",
-    "@stlmpp/store": "~6.2.0",
-    "@stlmpp/utils": "~6.2.0",
+    "@stlmpp/control": "~7.0.0-next.0",
+    "@stlmpp/router": "~7.0.0-next.0",
+    "@stlmpp/store": "~7.0.0-next.0",
+    "@stlmpp/utils": "~7.0.0-next.0",
     "date-fns": "~2.22.1",
     "flag-icon-css": "~3.5.0",
     "ngx-currency": "~2.5.2",
@@ -36,7 +36,7 @@
     "ngx-progressbar": "~6.1.1",
     "rxjs": "~7.1.0",
     "socket.io-client": "~2.4.0",
-    "st-utils": "~1.7.0",
+    "st-utils": "~1.8.0",
     "string-similarity": "~4.0.4",
     "tslib": "~2.2.0",
     "uuid": "~8.3.2",
@@ -51,14 +51,14 @@
     "@angular-eslint/template-parser": "~12.1.0",
     "@angular/cli": "~12.0.3",
     "@angular/compiler-cli": "~12.0.3",
-    "@types/jasmine": "~3.7.6",
+    "@types/jasmine": "~3.7.7",
     "@types/node": "~12.11.1",
     "@types/socket.io-client": "~1.4.36",
     "@types/string-similarity": "~4.0.0",
     "@types/uuid": "~8.3.0",
     "@typescript-eslint/eslint-plugin": "~4.26.0",
     "@typescript-eslint/parser": "~4.26.0",
-    "eslint": "~7.27.0",
+    "eslint": "~7.28.0",
     "eslint-plugin-import": "~2.23.4",
     "eslint-plugin-jsdoc": "~35.1.2",
     "jasmine-core": "~3.7.1",
