--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["src/styles"]
             },
-            "vendorChunk": true,
+            "vendorChunk": false,
             "extractLicenses": false,
             "buildOptimizer": false,
             "sourceMap": true,
