--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@angular/service-worker": "~12.0.3",
     "@material/elevation": "~11.0.0",
     "@mdi/font": "~5.9.55",
-    "@stlmpp/control": "~7.0.0-next.1",
-    "@stlmpp/router": "~7.0.0-next.1",
-    "@stlmpp/store": "~7.0.0-next.1",
-    "@stlmpp/utils": "~7.0.0-next.1",
+    "@stlmpp/control": "~7.0.0",
+    "@stlmpp/router": "~7.0.0",
+    "@stlmpp/store": "~7.0.0",
+    "@stlmpp/utils": "~7.0.0",
     "date-fns": "~2.22.1",
     "flag-icon-css": "~3.5.0",
     "ngx-currency": "~2.5.2",
@@ -60,7 +60,7 @@
     "@typescript-eslint/parser": "~4.26.0",
     "eslint": "~7.28.0",
     "eslint-plugin-import": "~2.23.4",
-    "eslint-plugin-jsdoc": "~35.1.2",
+    "eslint-plugin-jsdoc": "~35.1.3",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.3",
