--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "karma-jasmine-html-reporter": "~1.6.0",
     "prettier": "~2.3.1",
     "protractor": "~7.0.0",
+    "stylelint": "~13.13.1",
+    "stylelint-config-standard": "~22.0.0",
+    "stylelint-scss": "~3.19.0",
     "ts-node": "~9.1.1",
     "typescript": "~4.2.4"
   }
