- added inputmask to mask the date input

--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.0-next.5",
-    "@angular/cdk": "~12.1.0-next.0",
+    "@angular/animations": "~12.1.0-next.6",
+    "@angular/cdk": "~12.1.0-rc.0",
     "@angular/common": "~12.1.0-next.5",
-    "@angular/compiler": "~12.1.0-next.5",
-    "@angular/core": "~12.1.0-next.5",
-    "@angular/forms": "~12.1.0-next.5",
-    "@angular/platform-browser": "~12.1.0-next.5",
-    "@angular/platform-browser-dynamic": "~12.1.0-next.5",
-    "@angular/router": "~12.1.0-next.5",
-    "@angular/service-worker": "~12.1.0-next.5",
+    "@angular/compiler": "~12.1.0-next.6",
+    "@angular/core": "~12.1.0-next.6",
+    "@angular/forms": "~12.1.0-next.6",
+    "@angular/platform-browser": "~12.1.0-next.6",
+    "@angular/platform-browser-dynamic": "~12.1.0-next.6",
+    "@angular/router": "~12.1.0-next.6",
+    "@angular/service-worker": "~12.1.0-next.6",
     "@material/elevation": "~11.0.0",
     "@mdi/js": "~5.9.55",
     "@stlmpp/control": "~7.0.0",
@@ -31,6 +31,7 @@
     "@stlmpp/utils": "~7.0.0",
     "date-fns": "~2.22.1",
     "flag-icon-css": "~3.5.0",
+    "inputmask": "^5.0.6",
     "ngx-currency": "~2.5.2",
     "ngx-mask": "~12.0.0",
     "ngx-progressbar": "~6.1.1",
@@ -50,7 +51,8 @@
     "@angular-eslint/schematics": "~12.1.0",
     "@angular-eslint/template-parser": "~12.1.0",
     "@angular/cli": "~12.1.0-next.5",
-    "@angular/compiler-cli": "~12.1.0-next.5",
+    "@angular/compiler-cli": "~12.1.0-next.6",
+    "@types/inputmask": "^5.0.0",
     "@types/jasmine": "~3.7.7",
     "@types/node": "~12.11.1",
     "@types/socket.io-client": "~1.4.36",
