--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@angular/service-worker": "~12.1.0-next.6",
     "@material/elevation": "~11.0.0",
     "@mdi/js": "~5.9.55",
-    "@stlmpp/control": "~7.0.0",
-    "@stlmpp/router": "~7.0.0",
-    "@stlmpp/store": "~7.0.0",
-    "@stlmpp/utils": "~7.0.0",
+    "@stlmpp/control": "~7.1.0",
+    "@stlmpp/router": "~7.1.0",
+    "@stlmpp/store": "~7.1.0",
+    "@stlmpp/utils": "~7.1.0",
     "date-fns": "~2.22.1",
     "flag-icon-css": "~3.5.0",
-    "inputmask": "^5.0.6",
+    "idb-keyval": "~5.0.6",
+    "inputmask": "~5.0.6",
     "ngx-currency": "~2.5.2",
     "ngx-mask": "~12.0.0",
     "ngx-progressbar": "~6.1.1",
@@ -45,24 +46,24 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.0-next.6",
-    "@angular-eslint/builder": "~12.1.0",
-    "@angular-eslint/eslint-plugin": "~12.1.0",
-    "@angular-eslint/eslint-plugin-template": "~12.1.0",
-    "@angular-eslint/schematics": "~12.1.0",
-    "@angular-eslint/template-parser": "~12.1.0",
+    "@angular-eslint/builder": "~12.2.0",
+    "@angular-eslint/eslint-plugin": "~12.2.0",
+    "@angular-eslint/eslint-plugin-template": "~12.2.0",
+    "@angular-eslint/schematics": "~12.2.0",
+    "@angular-eslint/template-parser": "~12.2.0",
     "@angular/cli": "~12.1.0-next.6",
     "@angular/compiler-cli": "~12.1.0-next.6",
-    "@types/inputmask": "^5.0.0",
+    "@types/inputmask": "~5.0.0",
     "@types/jasmine": "~3.7.7",
     "@types/node": "~12.11.1",
     "@types/socket.io-client": "~1.4.36",
     "@types/string-similarity": "~4.0.0",
     "@types/uuid": "~8.3.0",
-    "@typescript-eslint/eslint-plugin": "~4.27.0",
-    "@typescript-eslint/parser": "~4.27.0",
-    "eslint": "~7.28.0",
+    "@typescript-eslint/eslint-plugin": "~4.28.0",
+    "@typescript-eslint/parser": "~4.28.0",
+    "eslint": "~7.29.0",
     "eslint-plugin-import": "~2.23.4",
-    "eslint-plugin-jsdoc": "~35.3.0",
+    "eslint-plugin-jsdoc": "~35.4.0",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.4",
