--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.0-next.6",
-    "@angular/cdk": "~12.1.0-rc.0",
-    "@angular/common": "~12.1.0-next.6",
-    "@angular/compiler": "~12.1.0-next.6",
-    "@angular/core": "~12.1.0-next.6",
-    "@angular/forms": "~12.1.0-next.6",
-    "@angular/platform-browser": "~12.1.0-next.6",
-    "@angular/platform-browser-dynamic": "~12.1.0-next.6",
-    "@angular/router": "~12.1.0-next.6",
-    "@angular/service-worker": "~12.1.0-next.6",
+    "@angular/animations": "~12.1.0",
+    "@angular/cdk": "~12.1.0",
+    "@angular/common": "~12.1.0",
+    "@angular/compiler": "~12.1.0",
+    "@angular/core": "~12.1.0",
+    "@angular/forms": "~12.1.0",
+    "@angular/platform-browser": "~12.1.0",
+    "@angular/platform-browser-dynamic": "~12.1.0",
+    "@angular/router": "~12.1.0",
+    "@angular/service-worker": "~12.1.0",
     "@material/elevation": "~11.0.0",
     "@mdi/js": "~5.9.55",
     "@stlmpp/control": "~7.1.0",
@@ -45,14 +45,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.0-next.6",
+    "@angular-devkit/build-angular": "~12.1.0",
     "@angular-eslint/builder": "~12.2.0",
     "@angular-eslint/eslint-plugin": "~12.2.0",
     "@angular-eslint/eslint-plugin-template": "~12.2.0",
     "@angular-eslint/schematics": "~12.2.0",
     "@angular-eslint/template-parser": "~12.2.0",
-    "@angular/cli": "~12.1.0-next.6",
-    "@angular/compiler-cli": "~12.1.0-next.6",
+    "@angular/cli": "~12.1.0",
+    "@angular/compiler-cli": "~12.1.0",
     "@types/inputmask": "~5.0.0",
     "@types/jasmine": "~3.7.7",
     "@types/node": "~12.11.1",
@@ -71,7 +71,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.6.0",
-    "prettier": "~2.3.1",
+    "prettier": "~2.3.2",
     "protractor": "~7.0.0",
     "stylelint": "~13.13.1",
     "stylelint-config-standard": "~22.0.0",
