--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@stlmpp/utils": "~7.2.0",
     "date-fns": "~2.22.1",
     "flag-icon-css": "~3.5.0",
+    "highlight.js": "~11.1.0",
     "idb-keyval": "~5.0.6",
     "inputmask": "~5.0.6",
     "ngx-currency": "~2.5.2",
+    "ngx-highlightjs": "~4.1.4",
     "ngx-mask": "~12.0.0",
     "ngx-progressbar": "~6.1.1",
     "rxjs": "~7.2.0",
