--- a/angular.json
+++ b/angular.json
@@ -41,8 +41,8 @@
             "extractLicenses": true,
             "buildOptimizer": true,
             "budgets": [
-              { "type": "initial", "maximumWarning": "1mb", "maximumError": "3mb" },
-              { "type": "anyComponentStyle", "maximumWarning": "4kb", "maximumError": "6kb" }
+              { "type": "initial", "maximumWarning": "500kb", "maximumError": "1mb" },
+              { "type": "anyComponentStyle", "maximumWarning": "2kb", "maximumError": "4kb" }
             ]
           },
           "configurations": {
