--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
-    "module": "es2020",
-    "lib": ["es2018", "dom"],
+    "target": "ES2015",
+    "module": "ES2020",
+    "lib": ["ES2020", "DOM"],
     "paths": {
       "@util/*": ["./src/app/util/*"],
       "@model/*": ["./src/app/model/*"],
