--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "ngx-highlightjs": "~5.0.0",
     "ngx-mask": "~12.0.0",
     "ngx-progressbar": "~6.1.1",
+    "ngx-quill": "~14.3.0",
+    "quill": "~1.3.7",
     "rxjs": "~7.3.0",
     "socket.io-client": "~4.2.0",
     "st-utils": "~2.4.0",
@@ -59,6 +61,7 @@
     "@types/inputmask": "~5.0.1",
     "@types/jasmine": "~3.9.0",
     "@types/node": "~14.17.11",
+    "@types/quill": "~1.3.10",
     "@types/string-similarity": "~4.0.0",
     "@types/uuid": "~8.3.1",
     "@typescript-eslint/eslint-plugin": "~4.31.0",
