- removed no-invalid-position-at-import-rule from stylelint - added quill-mention module - added locked icon in the topic list - added actions to post - improved styling for quill

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,26 +2,15 @@
   "extends": "stylelint-config-standard",
   "plugins": ["stylelint-scss"],
   "rules": {
+    "no-invalid-position-at-import-rule": null,
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
     "at-rule-empty-line-before": [
       "always",
-      {
-        "ignoreAtRules": ["if", "else", "return", "include", "use", "import", "forward"]
-      }
+      { "ignoreAtRules": ["if", "else", "return", "include", "use", "import", "forward"] }
     ],
-    "block-closing-brace-newline-after": [
-      "always",
-      {
-        "ignoreAtRules": ["if", "else"]
-      }
-    ],
-    "selector-pseudo-element-no-unknown": [
-      true,
-      {
-        "ignorePseudoElements": ["ng-deep"]
-      }
-    ],
+    "block-closing-brace-newline-after": ["always", { "ignoreAtRules": ["if", "else"] }],
+    "selector-pseudo-element-no-unknown": [true, { "ignorePseudoElements": ["ng-deep"] }],
     "no-empty-source": null
   }
 }
