--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ngx-progressbar": "~6.1.1",
     "ngx-quill": "~14.3.0",
     "quill": "~1.3.7",
+    "quill-mention": "^3.0.4",
     "rxjs": "~7.3.0",
     "socket.io-client": "~4.2.0",
     "st-utils": "~2.4.1",
