--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.12",
-    "@angular/cdk": "~12.2.12",
-    "@angular/common": "~12.2.12",
-    "@angular/compiler": "~12.2.12",
-    "@angular/core": "~12.2.12",
-    "@angular/forms": "~12.2.12",
-    "@angular/platform-browser": "~12.2.12",
-    "@angular/platform-browser-dynamic": "~12.2.12",
-    "@angular/router": "~12.2.12",
-    "@angular/service-worker": "~12.2.12",
+    "@angular/animations": "~13.0.3",
+    "@angular/cdk": "~13.0.3",
+    "@angular/common": "~13.0.3",
+    "@angular/compiler": "~13.0.3",
+    "@angular/core": "~13.0.3",
+    "@angular/forms": "~13.0.3",
+    "@angular/platform-browser": "~13.0.3",
+    "@angular/platform-browser-dynamic": "~13.0.3",
+    "@angular/router": "~13.0.3",
+    "@angular/service-worker": "~13.0.3",
     "@ckeditor/ckeditor5-angular": "~2.0.2",
     "@material/elevation": "~13.0.0",
     "@mdi/js": "~6.5.95",
@@ -31,14 +31,14 @@
     "@stlmpp/router": "~8.2.2",
     "@stlmpp/store": "~8.2.2",
     "@stlmpp/utils": "~8.2.2",
-    "date-fns": "~2.26.0",
-    "flag-icon-css": "~4.1.5",
+    "date-fns": "~2.27.0",
+    "flag-icon-css": "~4.1.6",
     "highlight.js": "~11.3.1",
     "idb-keyval": "~6.0.3",
     "inputmask": "~5.0.6",
     "ngx-currency": "~2.5.3",
-    "ngx-highlightjs": "~5.0.0",
-    "ngx-mask": "~12.0.0",
+    "ngx-highlightjs": "~6.1.0",
+    "ngx-mask": "~13.0.0",
     "ngx-progressbar": "~6.1.1",
     "rxjs": "~7.4.0",
     "socket.io-client": "~4.4.0",
@@ -49,32 +49,32 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.12",
-    "@angular-eslint/builder": "~12.6.1",
-    "@angular-eslint/eslint-plugin": "~12.6.1",
-    "@angular-eslint/eslint-plugin-template": "~12.6.1",
-    "@angular-eslint/schematics": "~12.6.1",
-    "@angular-eslint/template-parser": "~12.6.1",
-    "@angular/cli": "~12.2.12",
-    "@angular/compiler-cli": "~12.2.12",
+    "@angular-devkit/build-angular": "~13.0.4",
+    "@angular-eslint/builder": "~13.0.1",
+    "@angular-eslint/eslint-plugin": "~13.0.1",
+    "@angular-eslint/eslint-plugin-template": "~13.0.1",
+    "@angular-eslint/schematics": "~13.0.1",
+    "@angular-eslint/template-parser": "~13.0.1",
+    "@angular/cli": "~13.0.4",
+    "@angular/compiler-cli": "~13.0.3",
     "@types/inputmask": "~5.0.1",
     "@types/jasmine": "~3.10.2",
     "@types/node": "~14.17.21",
     "@types/string-similarity": "~4.0.0",
     "@types/uuid": "~8.3.3",
-    "@typescript-eslint/eslint-plugin": "~4.32.0",
-    "@typescript-eslint/parser": "~4.32.0",
-    "eslint": "~7.32.0",
-    "eslint-plugin-import": "~2.24.2",
-    "eslint-plugin-jsdoc": "~36.1.1",
+    "@typescript-eslint/eslint-plugin": "5.5.0",
+    "@typescript-eslint/parser": "5.5.0",
+    "eslint": "^8.2.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsdoc": "~37.1.0",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "prettier": "~2.4.1",
+    "prettier": "~2.5.1",
     "protractor": "~7.0.0",
     "stylelint": "~13.13.1",
     "stylelint-config-standard": "~22.0.0",
