--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.3",
-    "@angular/cdk": "~13.0.3",
-    "@angular/common": "~13.0.3",
-    "@angular/compiler": "~13.0.3",
-    "@angular/core": "~13.0.3",
-    "@angular/forms": "~13.0.3",
-    "@angular/platform-browser": "~13.0.3",
-    "@angular/platform-browser-dynamic": "~13.0.3",
-    "@angular/router": "~13.0.3",
-    "@angular/service-worker": "~13.0.3",
+    "@angular/animations": "~13.1.1",
+    "@angular/cdk": "~13.1.1",
+    "@angular/common": "~13.1.1",
+    "@angular/compiler": "~13.1.1",
+    "@angular/core": "~13.1.1",
+    "@angular/forms": "~13.1.1",
+    "@angular/platform-browser": "~13.1.1",
+    "@angular/platform-browser-dynamic": "~13.1.1",
+    "@angular/router": "~13.1.1",
+    "@angular/service-worker": "~13.1.1",
     "@ckeditor/ckeditor5-angular": "~2.0.2",
     "@material/elevation": "~13.0.0",
     "@mdi/js": "~6.5.95",
@@ -31,16 +31,16 @@
     "@stlmpp/router": "~8.2.2",
     "@stlmpp/store": "~8.2.2",
     "@stlmpp/utils": "~8.2.2",
-    "date-fns": "~2.27.0",
-    "flag-icon-css": "~4.1.6",
+    "date-fns": "~2.28.0",
+    "flag-icons": "~6.0.1",
     "highlight.js": "~11.3.1",
     "idb-keyval": "~6.0.3",
-    "inputmask": "~5.0.6",
+    "inputmask": "~5.0.7",
     "ngx-currency": "~2.5.3",
     "ngx-highlightjs": "~6.1.0",
-    "ngx-mask": "~13.0.0",
+    "ngx-mask": "~13.0.1",
     "ngx-progressbar": "~6.1.1",
-    "rxjs": "~7.4.0",
+    "rxjs": "~7.5.1",
     "socket.io-client": "~4.4.0",
     "st-utils": "~2.4.1",
     "string-similarity": "~4.0.4",
@@ -49,24 +49,24 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
+    "@angular-devkit/build-angular": "~13.1.2",
     "@angular-eslint/builder": "~13.0.1",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/schematics": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.0.4",
-    "@angular/compiler-cli": "~13.0.3",
+    "@angular/cli": "~13.1.2",
+    "@angular/compiler-cli": "~13.1.1",
     "@types/inputmask": "~5.0.1",
     "@types/jasmine": "~3.10.2",
-    "@types/node": "~14.17.21",
+    "@types/node": "~14.18.3",
     "@types/string-similarity": "~4.0.0",
     "@types/uuid": "~8.3.3",
-    "@typescript-eslint/eslint-plugin": "5.5.0",
-    "@typescript-eslint/parser": "5.5.0",
-    "eslint": "^8.2.0",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-jsdoc": "~37.1.0",
+    "@typescript-eslint/eslint-plugin": "~5.8.1",
+    "@typescript-eslint/parser": "~5.8.1",
+    "eslint": "~8.5.0",
+    "eslint-plugin-import": "~2.25.3",
+    "eslint-plugin-jsdoc": "~37.5.0",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.9",
@@ -76,11 +76,11 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "prettier": "~2.5.1",
     "protractor": "~7.0.0",
-    "stylelint": "~13.13.1",
-    "stylelint-config-standard": "~22.0.0",
-    "stylelint-scss": "~3.21.0",
+    "stylelint": "~14.2.0",
+    "stylelint-config-standard": "~24.0.0",
+    "stylelint-scss": "~4.1.0",
     "ts-node": "~10.4.0",
-    "typescript": "~4.4.4",
+    "typescript": "~4.5.4",
     "webpack-bundle-analyzer": "~4.5.0"
   }
 }
