--- a/package.json
+++ b/package.json
@@ -74,11 +74,11 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "~8.4.5",
     "prettier": "~2.5.1",
     "protractor": "~7.0.0",
     "stylelint": "~14.2.0",
-    "stylelint-config-standard": "~24.0.0",
-    "stylelint-scss": "~4.1.0",
+    "stylelint-config-standard-scss": "~3.0.0",
     "ts-node": "~10.4.0",
     "typescript": "~4.5.4",
     "webpack-bundle-analyzer": "~4.5.0"
