--- a/angular.json
+++ b/angular.json
@@ -38,34 +38,59 @@
                 "output": "assets/flag"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "src/styles.scss"
+            ],
             "scripts": [],
             "stylePreprocessorOptions": {
-              "includePaths": ["src/styles"]
+              "includePaths": [
+                "src/styles"
+              ]
             },
             "vendorChunk": false,
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json",
-            "optimization": { "fonts": { "inline": false }, "styles": { "inlineCritical": false } },
+            "optimization": {
+              "fonts": {
+                "inline": false
+              },
+              "styles": {
+                "inlineCritical": false
+              }
+            },
             "outputHashing": "all",
             "sourceMap": false,
             "namedChunks": false,
             "extractLicenses": true,
             "buildOptimizer": true,
             "budgets": [
-              { "type": "initial", "maximumWarning": "500kb", "maximumError": "1mb" },
-              { "type": "anyComponentStyle", "maximumWarning": "2kb", "maximumError": "4kb" }
+              {
+                "type": "initial",
+                "maximumWarning": "500kb",
+                "maximumError": "1mb"
+              },
+              {
+                "type": "anyComponentStyle",
+                "maximumWarning": "2kb",
+                "maximumError": "4kb"
+              }
             ]
           },
           "configurations": {
             "production": {
               "fileReplacements": [
-                { "replace": "src/environments/environment.ts", "with": "src/environments/environment.prod.ts" }
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
               ]
             },
             "development": {
               "fileReplacements": [
-                { "replace": "src/environments/environment.ts", "with": "src/environments/environment.dev.ts" }
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
               ],
               "namedChunks": true
             },
@@ -120,15 +145,24 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": ["src/favicon.ico", "src/assets", "src/manifest.json"],
-            "styles": ["src/styles.scss"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/manifest.json"
+            ],
+            "styles": [
+              "src/styles.scss"
+            ],
             "scripts": []
           }
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
           }
         },
         "e2e": {
@@ -146,9 +180,10 @@
       }
     }
   },
-  "defaultProject": "biomercs-ng",
   "cli": {
     "analytics": "f24f9637-c7d5-4d50-ab3f-ec7931bdf2da",
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
