--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2015",
+    "target": "es2020",
     "module": "ES2020",
     "lib": ["ES2020", "DOM"],
     "paths": {
