--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,11 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "esModuleInterop": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
-    "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
@@ -35,7 +35,6 @@
       ]
     },
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
     "noImplicitOverride": true,
     "useDefineForClassFields": false
   },
