--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.3",
-    "@angular/cdk": "~13.0.3",
-    "@angular/common": "~13.0.3",
-    "@angular/compiler": "~13.0.3",
-    "@angular/core": "~13.0.3",
-    "@angular/forms": "~13.0.3",
-    "@angular/platform-browser": "~13.0.3",
-    "@angular/platform-browser-dynamic": "~13.0.3",
-    "@angular/router": "~13.0.3",
-    "@angular/service-worker": "~13.0.3",
+    "@angular/animations": "^14.3.0",
+    "@angular/cdk": "^14.2.7",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
+    "@angular/service-worker": "^14.3.0",
     "@ckeditor/ckeditor5-angular": "~2.0.2",
     "@material/elevation": "~13.0.0",
     "@mdi/js": "~6.5.95",
-    "@stlmpp/control": "~8.2.2",
-    "@stlmpp/router": "~8.2.2",
-    "@stlmpp/store": "~8.2.2",
-    "@stlmpp/utils": "~8.2.2",
+    "@stlmpp/control": "~9.1.0",
+    "@stlmpp/router": "~9.1.0",
+    "@stlmpp/store": "~9.1.0",
+    "@stlmpp/utils": "~9.1.0",
     "date-fns": "~2.27.0",
     "flag-icon-css": "~4.1.6",
     "highlight.js": "~11.3.1",
@@ -49,22 +49,22 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
-    "@angular-eslint/builder": "~13.0.1",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/schematics": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.0.4",
-    "@angular/compiler-cli": "~13.0.3",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular-eslint/builder": "~14.4.0",
+    "@angular-eslint/eslint-plugin": "~14.4.0",
+    "@angular-eslint/eslint-plugin-template": "~14.4.0",
+    "@angular-eslint/schematics": "~14.4.0",
+    "@angular-eslint/template-parser": "~14.4.0",
+    "@angular/cli": "^14.2.13",
+    "@angular/compiler-cli": "^14.3.0",
     "@types/inputmask": "~5.0.1",
     "@types/jasmine": "~3.10.2",
     "@types/node": "~14.17.21",
     "@types/string-similarity": "~4.0.0",
     "@types/uuid": "~8.3.3",
-    "@typescript-eslint/eslint-plugin": "5.5.0",
-    "@typescript-eslint/parser": "5.5.0",
-    "eslint": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.23.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jsdoc": "~37.1.0",
     "jasmine-core": "~3.10.1",
@@ -80,7 +80,7 @@
     "stylelint-config-standard": "~22.0.0",
     "stylelint-scss": "~3.21.0",
     "ts-node": "~10.4.0",
-    "typescript": "~4.4.4",
+    "typescript": "~4.8.4",
     "webpack-bundle-analyzer": "~4.5.0"
   }
 }
