--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2015",
+    "target": "es2020",
     "module": "ES2020",
+    "skipLibCheck": true,
     "lib": ["ES2020", "DOM"],
     "paths": {
       "@util/*": ["./src/app/util/*"],
